# trading-app

./: .gitignore  AGENTS.md  BackTestingSpec.md  BeforePilot.md  CALLBACK_GUARDRAILS.md  CHANGELOG.md  CodeReview#1.md  CodeReview#BackTesting.md  LICENSE  README.md  SPEC.md  TODO.md  UATReminder.md  backtester.py  config.py  config.yaml  data_loader.py  determinism_check.py  exchange_time.py  man.py  mock_broker.py  param_sweep.py  pyproject.toml  requirements.txt  run_tests.py  test_backtester.py  test_data_loader.py  test_deal_state_machine.py  test_determinism.py  test_exchange_time.py  test_helpers.py  test_invariants.py  test_mock_broker.py  test_param_sweep.py  test_session_flatten.py  test_uat_report.py  test_volume_threshold.py  uat_report.py
.grok/: settings.json
config/: config.yaml
docs/: Architecture.md  AuditContract.md  BackTesting.md  BackTestingSpec.md  BeforePilot.md  CodeReview#2.md  CodeReview#3.md  CodeReview#BackTesting.md  CodeReview-Phase8-Step1-20260616.md  CodeReview-trading-app-v0.1.0.md  DOC_MAP.md  Phase8-MergeFixSpec.md  README.md  RELEASE_CHECKLIST.md  SWEEP_SPEC.md  UATReminder.md  UAT_CHECKLIST.md  UPGRADE_RUNBOOK.md  WeeklyStatus.md  WindowsOps.md
scripts/: ci-setup.sh
src/: alerts.py  backtester.py  compress_tick_cache.py  config.py  data_loader.py  exchange_time.py  kbar_archiver.py  man.py  observability.py  order_errors.py  param_sweep.py  performance_metrics.py  signal_audit.py  strategy_config.py  strategy_phase6.py  tick_archiver.py  uat_report.py
tests/: __init__.py  test_alerts.py  test_backtester.py  test_data_loader.py  (+15 more)
(+86 files in other folders)
